syntax = "proto3";

package imagetransfer;

service ImageTransfer {
  rpc SendImage (ImageRequest) returns (ImageResponse);
}

message ImageRequest {
  bytes image_data = 1;
  string image_name = 2;
}

message ImageResponse {
  string status = 1;
  int64 latency_ms = 2;
}
